rails_apps_composer: Gemfile

--- a/config/railscomposer.yml
+++ b/config/railscomposer.yml
@@ -26,3 +26,29 @@ quiet_assets: [true]
 better_errors: [true]
 pry: [false]
 rvmrc: []
+apps4: [rails-devise]
+announcements: [none]
+dev_webserver: [webrick]
+prod_webserver: [unicorn]
+database: [postgresql]
+templates: [slim]
+tests: [rspec]
+continuous_testing: [guard]
+frontend: [simple]
+email: [smtp]
+authentication: [devise]
+devise_modules: [invitable]
+omniauth_provider: []
+authorization: [false]
+form_builder: [simple_form]
+pages: [users]
+locale: [none]
+analytics: []
+deployment: []
+ban_spiders: []
+github: []
+local_env_file: [false]
+quiet_assets: [true]
+better_errors: [true]
+pry: [false]
+rvmrc: []
